--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 06:24:00 AM</p>
+    <p class="lastupdate">09/18/2020 06:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">55.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">71%</td>
+        <td class="data">72%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.934 inHg (0.025)</td>
+        <td class="data">29.935 inHg (0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="06:23:10 AM">
-            64.3</span>
+          <span title="06:28:38 AM">
+            64.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:23:10 AM" class="loval">
-            64.3</span>
+          <span title="06:28:38 AM" class="loval">
+            64.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="06:16:50 AM">
-            55.0</span><br/>
+          <span title="06:27:16 AM">
+            55.1</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:16:50 AM">
-            71</span><br/>
+          <span title="06:27:04 AM">
+            72</span><br/>
           <span title="01:25:34 AM">
             51</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 15 hours, 37 minutes</td>
+      <td class="data">16 days, 15 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 15 hours, 37 minutes</td>
+      <td class="data">16 days, 15 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
