--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 06:34:00 AM</p>
+    <p class="lastupdate">09/18/2020 06:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.0&#176;F</td>
+        <td class="data">63.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.0&#176;F</td>
+        <td class="data">63.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.0&#176;F</td>
+        <td class="data">63.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">54.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.937 inHg (0.020)</td>
+        <td class="data">29.937 inHg (0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">2 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="06:31:34 AM">
-            64.0</span>
+          <span title="06:36:40 AM">
+            63.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:31:34 AM" class="loval">
-            64.0</span>
+          <span title="06:36:40 AM" class="loval">
+            63.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 15 hours, 47 minutes</td>
+      <td class="data">16 days, 15 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 15 hours, 47 minutes</td>
+      <td class="data">16 days, 15 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
