--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 06:54:00 AM</p>
+    <p class="lastupdate">09/18/2020 06:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">55.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">73%</td>
+        <td class="data">74%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.941 inHg (0.034)</td>
+        <td class="data">29.942 inHg (0.032)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="06:27:16 AM">
-            55.1</span><br/>
+          <span title="06:56:07 AM">
+            55.2</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:39:02 AM">
-            73</span><br/>
+          <span title="06:56:07 AM">
+            74</span><br/>
           <span title="01:25:34 AM">
             51</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:54:00 AM">
-            29.943</span><br/>
+          <span title="06:56:01 AM">
+            29.945</span><br/>
           <span title="03:51:00 AM">
             29.907</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 16 hours, 7 minutes</td>
+      <td class="data">16 days, 16 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 16 hours, 7 minutes</td>
+      <td class="data">16 days, 16 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
