--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 06:59:00 AM</p>
+    <p class="lastupdate">09/18/2020 07:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.942 inHg (0.032)</td>
+        <td class="data">29.949 inHg (0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNW (338&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:56:01 AM">
-            29.945</span><br/>
+          <span title="07:03:01 AM">
+            29.949</span><br/>
           <span title="03:51:00 AM">
             29.907</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 16 hours, 12 minutes</td>
+      <td class="data">16 days, 16 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 16 hours, 12 minutes</td>
+      <td class="data">16 days, 16 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
