--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 07:54:00 AM</p>
+    <p class="lastupdate">09/18/2020 07:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.4&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.955 inHg (0.035)</td>
+        <td class="data">29.954 inHg (0.035)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph NW (315&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.9&#176;F</td>
+        <td class="data">73.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,13 +235,13 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="07:52:11 AM">
+          <span title="07:55:47 AM">
             55.6</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:52:11 AM (Friday)">
+          <span title="07:55:47 AM (Friday)">
             55.6</span><br/>
           <span title="04:50:46 PM (Wednesday)">
             21.8</span>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 17 hours, 7 minutes</td>
+      <td class="data">16 days, 17 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 17 hours, 7 minutes</td>
+      <td class="data">16 days, 17 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
