--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 08:34:00 AM</p>
+    <p class="lastupdate">09/18/2020 08:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.7&#176;F</td>
+        <td class="data">66.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.7&#176;F</td>
+        <td class="data">66.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.7&#176;F</td>
+        <td class="data">66.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.6&#176;F</td>
+        <td class="data">55.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.959 inHg (0.035)</td>
+        <td class="data">29.962 inHg (0.034)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.8&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="08:32:31 AM">
-            56.1</span><br/>
+          <span title="08:36:27 AM">
+            56.2</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="08:32:31 AM (Friday)">
-            56.1</span><br/>
+          <span title="08:36:27 AM (Friday)">
+            56.2</span><br/>
           <span title="04:50:46 PM (Wednesday)">
             21.8</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="08:10:01 AM">
-            29.961</span><br/>
+          <span title="08:37:01 AM">
+            29.964</span><br/>
           <span title="03:51:00 AM">
             29.907</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 17 hours, 47 minutes</td>
+      <td class="data">16 days, 17 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 17 hours, 47 minutes</td>
+      <td class="data">16 days, 17 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
