--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 09:09:00 AM</p>
+    <p class="lastupdate">09/18/2020 09:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">68.0&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">68.0&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">68.0&#176;F</td>
+        <td class="data">68.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">56.6&#176;F</td>
+        <td class="data">56.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">67%</td>
+        <td class="data">65%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.954 inHg (0.021)</td>
+        <td class="data">29.953 inHg (0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">5 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.6&#176;F</td>
+        <td class="data">75.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:08:43 AM">
-            56.6</span><br/>
+          <span title="09:10:27 AM">
+            56.9</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:08:43 AM (Friday)">
-            56.6</span><br/>
+          <span title="09:10:27 AM (Friday)">
+            56.9</span><br/>
           <span title="04:50:46 PM (Wednesday)">
             21.8</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          351
+          352
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 18 hours, 22 minutes</td>
+      <td class="data">16 days, 18 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 18 hours, 22 minutes</td>
+      <td class="data">16 days, 18 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
