--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 09:19:00 AM</p>
+    <p class="lastupdate">09/18/2020 09:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">56.6&#176;F</td>
+        <td class="data">56.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">65%</td>
+        <td class="data">64%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.959 inHg (0.022)</td>
+        <td class="data">29.959 inHg (0.025)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph NNW (338&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 18 hours, 32 minutes</td>
+      <td class="data">16 days, 18 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 18 hours, 32 minutes</td>
+      <td class="data">16 days, 18 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
